--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <img class="showtime" src="./images/showtime.png" />
     <img class="date" src="./images/date.png" />
     <video class="promo" id="promovid" loop autoplay muted onclick="togglePlay()">
-      <source src="video/Out.mp4">
+      <source src="video/Out.webm">
     </video>
     <div class="sponsored">
       <img width="100%" src="./images/sponsorednobg.png" />
